--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     // mybatis + jdbc maria (3.x version is beta version)
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+
+    //NotBlank 처리
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 test {
